fix section visits margins and spacing

--- a/style/style.css
+++ b/style/style.css
@@ -580,7 +580,7 @@ section.popular .header i.fas {
     }
 
     .accommodations {
-        flex-basis: 55%;
+        flex-basis: 62%;
         background-color: var(--bgc);
         border-radius: 25px;
         justify-content: space-between;
@@ -658,6 +658,8 @@ section.popular .header i.fas {
         flex-direction: row;
         flex-wrap: wrap;
         height: 600px;
+        margin-left: 40px;
+        margin-right: 40px;
 
     }
 
@@ -667,7 +669,7 @@ section.popular .header i.fas {
     }
 
     section.popular {
-        flex-basis: 35%;
+        flex-basis: 30%;
     }
 
     .accommodations .wrapper .place .picture {
